--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "sqlite3": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
