--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.0",
+    "jsonwebtoken": "^9.0.0",
     "sqlite3": "^5.1.0"
   },
   "devDependencies": {
