--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.0",
     "jsonwebtoken": "^9.0.0",
+    "socket.io": "^4.7.0",
     "sqlite3": "^5.1.0"
   },
   "devDependencies": {
