--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "sqlite3": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.0"
+    "jest": "^29.0.0",
+    "nodemon": "^2.0.0",
+    "supertest": "^6.3.0"
   }
 }
