--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "socket.io": "^4.7.0",
     "sqlite3": "^5.1.0"
   },
